// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly horizontally 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

.emotion-1.emotion-1 {
  margin-top: 16px;
  margin-bottom: 16px;
}

<hr
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly vertically 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

<hr
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #4f0599;
}

<hr
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    class="emotion-0 emotion-1"
  >
    <hr
      class="emotion-2 emotion-3"
    />
    <svg
      class="sc-ui-icon emotion-4 emotion-5"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="emotion-2 emotion-3"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1.emotion-1 {
  margin-top: 16px;
  margin-bottom: 16px;
}

.emotion-3 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    class="emotion-0 emotion-1"
  >
    <hr
      class="emotion-2 emotion-3"
    />
    <svg
      class="sc-ui-icon emotion-4 emotion-5"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="emotion-2 emotion-3"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  fill: #d4dae7;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.emotion-5.emotion-5 {
  vertical-align: middle;
  margin-top: 8px;
  margin-bottom: 8px;
}

<div
    class="emotion-0 emotion-1"
  >
    <hr
      class="emotion-2 emotion-3"
    />
    <svg
      class="sc-ui-icon emotion-4 emotion-5"
      viewBox="0 0 24 24"
    >
      <path
        d="M1,12L5,16V13H17.17C17.58,14.17 18.69,15 20,15A3,3 0 0,0 23,12A3,3 0 0,0 20,9C18.69,9 17.58,9.83 17.17,11H5V8L1,12Z"
        style="transform: rotate(-90deg); transform-origin: 50% 50%;"
      />
    </svg>
    <hr
      class="emotion-2 emotion-3"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom thickness 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  border: 0;
  width: auto;
  height: 3px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

<hr
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with default props 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
}

<hr
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with raw color 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #121212;
}

<hr
    class="emotion-0 emotion-1"
  />
</DocumentFragment>
`;
